# ulsh

./: CMakeLists.txt  exec.c  exec.h  jobs.c  jobs.h  parser.c  parser.h  prompt.c  prompt.h  ulsh.c
builtins/: CMakeLists.txt  builtin.c  builtin.h  dirops.c  dirops.h  jobops.c  jobops.h  procops.c  procops.h
c0r3uti1s/: CMakeLists.txt  cat.c  cp.c  echo.c  kill.c  less.c  ln.c  ls.c  mkdir.c  mv.c  rm.c  touch.c  xargs.c
tests/: CMakeLists.txt  test_builtin.c  test_parser.c  test_parser_interactive.c
